<resources>
    <string name="app_name">EGAL Delivery</string>
    <string name="save_menu">Save</string>
    <string name="name">Name</string>
    <string name="restname">Restaurant name</string>
    <string name="address">Address</string>
    <string name="email">e-Mail</string>
    <string name="phonenumber">Phone number</string>
    <string name="idproof">ID proof</string>
    <string name="description">Description</string>
    <string name="data">Data</string>
    <string name="signup">Sign up</string>
    <string name="userdetailsExp">User details not available.\nPlease provide the details</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="profileButton">Edit restaurant profile</string>
    <string name="menusButton">Manage menus</string>
    <string name="moreButton">More</string>
    <string name="dish_picture_description">Picture of the dish</string>
    <string name="daytime">Time of the day</string>
    <string name="food_type">Type of food</string>
    <string name="price">Price (€)</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="food_name">Food name</string>
    <string name="plus"> + </string>
    <string name="minus"> - </string>
</resources>
