<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/bottom_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_menu"
        android:textColor="@color/blue_600"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:id="@+id/dish_main_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottom_save_button"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        >

        <ImageView
            android:id="@+id/dish_picture"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:src="@drawable/food_icon"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            >

            <TextView
                android:id="@+id/bottom_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_weight="1"
                android:textStyle="bold"
                android:hint="@string/food_name"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/bottom_price"
                    style="@style/onelineuserEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:layout_weight="2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="-"
                    android:layout_weight="1"
                    />
                <EditText
                    android:id="@+id/bottom_quantity"
                    style="@style/onelineuserEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:gravity="center_horizontal"
                    android:layout_weight="1"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dish_bottom_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dish_main_info"
        android:hint="@string/description"
        android:maxLines="1"
        android:ellipsize="end"
        />

</RelativeLayout>